# cDataPipelineSimpleModel

./: .gitignore  CMakeLists.txt  README.md  plot_results.py
data/: config.yaml
include/cSimpleModel/: simple_model.h
src/: simple_model.c
